--- a/style.css
+++ b/style.css
@@ -2,279 +2,301 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
- 
+
 }
 html, body{
     height: 100%;
     width: 100%;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 #container{
     height: 100%;
     width: 100%;
-  
-}
-
-#section-1{
-    width: 100%;
-    height: 100vh;
-    padding-bottom: 2rem;
-    background: #000;
-    position: relative;
-   
 
 }
-#section-1 #top{
- display: flex;
-    align-items: top;
-    justify-content: space-between;
-    padding: 1.5rem ;
-    color:#f1eeeaf5;
-    
-}
-#section-1 h5{
-    font-weight: 400;
-
-}
-#section-1 p{
-    width: 20%;
-    text-align: justify;
-    font-weight: 400;
-   
-} 
-#center{
-    display: flex;
-    align-items: flex-start;
-    justify-content:flex-start;
-    color: #f1eeeaf5;
-    margin-top: 2rem;
-}
-#center img{
-     /* height: 200px; */
-     width: 200px;
-}
-#center #text{
-    padding: 0 2rem;
-
-}
-#center #text h5{
-   
-    font-weight: 400;
-}
-#center #text h1{
-    font-size: 2.4rem;
-    text-transform: uppercase;
-    font-weight: 400;
-    line-height: 1;
-    margin-top: 4rem;
-}
-#center #year{
-    display: flex;
-    margin-left: 6rem;
-    z-index: 999;
-}
-#center #year h1{
-    font-size: 5.6rem;
-    font-weight: 400;
-    width: 40%;
-    line-height: .8;
-}#center #year h5{
-    text-transform: uppercase;
-    padding-left: 3rem;
-    font-weight: 400;
-
-}
-#bottum{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-}
-/* #bottum image{
-    width: 50%;
-
-}
-     */
-
-#bottum #button{
-    width: 40%;
-     height:200px ;
-    margin-left: 8rem;
-    padding: 2rem ;
-  
-} 
-#bottum #button button{
-    padding: .6rem .8rem;
-    background:transparent;
-    border: solid #f1eeeaf5 1px;
-    color:#f1eeeaf5;
-    border-radius: 5px; 
-    margin-right: 10px;
-     margin-top: 10px;
-     font-size: rem;
-     font-weight: 400;
-}    
-#bottum  img{
-    width: 630px;
-    height: 310px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    object-fit: cover;
- 
-}
-
-#section-2{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    
-}
-
-#section-2 #left{
-     background: #f1eeeaf5;
-    width: 70%;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    justify-content: space-between;
-    padding-bottom: 2rem;
-}
-#section-2 #left button{
-
-     padding: .4rem .6rem;
-    background:transparent;
-    border: solid #000 1px;
-    color: #000;
-    border-radius: 5px; 
-    margin-right: 6px;
-     margin-top: 10px;
-     font-size: 1rem;
-     font-weight: 400;
-}  
-#section-2 #left p{
-    width: 80%;
-    text-align: justify;
-   
-} 
-#section-2 #left h1{
-    width: 40%;
-    font-size: 7rem;
-    text-transform: uppercase;
-    font-weight: 400;
-    line-height: 1;
-}
-#typography{
-    background: #f1eeeaf5;
-    width: 30%;
-    border-left: solid #000 2px;
-    border-right: solid #000 2px;
-    padding-bottom: 2rem;
-}
-#typography #top{
-    padding: 2rem 2rem .6rem 2rem;
-    border-bottom: solid #000 2px;
-}
-#typography img{
-    width: 100%;
-    height: 350px;
-  object-fit: cover;
-}
-#typography #bottom{
-    padding: .4rem 2rem 0 2rem;
- 
-}
-#typography p{
-    font-size: 1rem;
-}
-#typography h5{
-    text-transform: uppercase;
-    font-weight: 500;
-    padding-bottom: .8rem;
-}
-#right{
-    width: 4%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    writing-mode: vertical-rl;
-    padding: 2rem;
-    
-}
-#right h5{
-    
-    font-weight:400;
-    text-transform: uppercase;
-}
-#section-3{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-   
-}
-#section-3 #top{
-    display: flex;
-    align-items:flex-start;
-    justify-content: space-between;
-    padding:0 1rem;
-     position: relative;
-     padding-bottom: 4rem;
-     border-bottom: #000 solid 2px;
-     border-right: #000 solid 2px;
-    background: #fffefca6;
-   
-
-}
-#section-3 #top h5{
-    text-transform: uppercase;
-    font-weight: 400;
-    padding-top: 1.6rem;
-
-}
-#section-3 #top img{
-    width: 50%;
-    margin-top: 1rem;
-}
-#section-3 #top h1{
-    position: absolute;
-    left: 24%;
-    bottom: -1%;
-    text-transform: uppercase;
-    font-size: 6.5rem;
-    font-weight: 400;
-
-}
-#section-3 #bottom{
-    text-align: center;
-    padding: 1rem ;
-    border-right: #000 solid 2px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: space-between;
-
-}
-#section-3 #bottom h1{
-    font-size: 3rem;
-    text-transform: uppercase;
-    width: 60%;
-    line-height: 1;
-    font-weight: 400;
-
-
-}
-#section-3 #bottom p{
-    width: 60%;
-    padding-top: 1rem;
-}
-
 span{
-      
+    
   font-family: "Great Vibes", cursive;
   font-weight: 400;
   font-style: normal;
 
+
 }
+#section-1{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    background: #000;
+    color: #e7e6e6cf;
+
+}
+
+#section-1  img{
+    width: 100px;
+    position: absolute;
+}
+#section-1 #text{
+    width: 100%;
+    height: 100%;
+    padding: 3rem;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: justify;
+  
+}
+#section-1 #text #top{
+    width:20%;
+    padding-top: 3rem;
+    margin-left: 65%; 
+}
+#section-1 #text #bottom{
+    width:20%;
+    padding-top: 3rem;
+   text-align: left;
+    margin-right: 20%;  
+}
+#section-1 #text h1{
+   font-size: 6rem;
+   font-weight: 300;
+   
+}
+#section-1 .image-1{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
+#section-1  .image-2{
+    /* position: absolute; */
+    top: 15%;
+    left: 60%;
+}
+#section-1 .image-3{
+    bottom: 10%;
+    left: 10%;
+}
+#section-1  .image-4{
+    bottom: 10%;
+    right: 30%;
+}#section-1 .image-5{
+    bottom: 28%;
+    left: 36%;
+}
+#section-1 .image-6{
+    bottom: 30%;
+    right: 8%;
+}
+
+#section-2{
+    height: 100vh;
+    width:calc(100%-2rem);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+     margin:  0 2rem;
+    position: relative;
+}
+#section-2 h1{
+    width: 100%;
+    font-size: 3rem;
+    font-weight: 400;
+    text-transform:uppercase;
+    padding: 1.6rem  0 0 0;
+   
+    border-bottom: solid #000 2px;
+}
+#section-2 #typography{
+    width: 100%;
+    display: flex;
+    align-items:flex-start;
+    justify-content: space-between;
+}
+#section-2 #typography p{
+    width: 10%;
+    padding-top: 1rem;
+}
+#section-2 .top-img{
+    width: 80px;
+    height: 60px;
+    object-fit: cover;
+
+}
+#section-2 .bottom-img{
+    width: 130px;
+    height: 70px;
+    object-fit: cover;
+   
+
+}
+
+#section-2  #image #helvetica{
+    width: 60%;
+    font-size: 3rem;
+    font-size: 6rem;
+    text-transform: uppercase;
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 17%;
+    line-height: 1;
+   
+}
+#section-2  #image .right{
+    top: 30%;
+    right: 0%;
+    width: 25%;
+    text-align: right;
+    position: absolute;
+}
+#section-2  #image .left{
+    bottom: 12%;
+    left: 10%;
+    width: 25%;
+    text-align: left;
+    position: absolute;
+    
+}
+#bottm{
+    width: 100%;
+    height: fit-content;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: right;
+    overflow: hidden;
+   
+}
+#bottm #btm-l{
+    width: 60%;
+    padding: 1rem;
+    
+}
+#bottm #btm-r{
+    width: 40%;
+
+}
+#section-3{
+    height: 100vh;
+    width: 100%;
+    background: #000;
+}
+#section-3 #sec-top{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* margin-top: 1rem;
+    border-top: #d6d6d6 solid 1px;   */
+}
+#section-3 .color{
+ color: #e7e6e6cf;
+ font-size: 3.2rem;
+ text-transform: uppercase;
+ line-height: 1;
+ margin-top: 2rem;
+ padding: 1.2rem 1rem 0 1rem;
+
+
+}
+#section-3 .btn{
+    color:  #e7e6e6cf;
+    width: 18%;
+    border:  #e7e6e6cf solid 1px;
+    padding: .4rem .8rem;
+    margin-right: 4rem;
+}
+
+
+
+#section-3 #sec-center{
+    width: 100%;
+    padding: 5px 0;
+    border-top: #d6d6d6 solid 1.8px;
+    border-bottom: #d6d6d6 solid 1.8px;
+
+}
+
+#section-3  img{
+    width: 249px;
+    height: 80px;
+    object-fit: cover; 
+}
+#sec-bottom{
+    width: 100%;
+    height: 374px;
+    color:  #e7e6e6cf;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: .4rem;
+    margin-top: 1rem;
+}
+
+#sec-bottom .section-1{
+    width: 20%;
+    height: 100%;
+    background: #000;
+
+}
+#sec-bottom .section-1 p{
+    width: 70%;
+}
+#sec-bottom .section-2{
+    width: 35%;
+    height: 100%;
+    color: #000;
+    background: #fff9f9d4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+
+}#sec-bottom .section-2 h6{
+    text-transform: uppercase;
+}
+#sec-bottom .section-2 p{
+    width: 70%;
+    text-align: justify;
+}
+#sec-bottom .section-3{
+    width: 25%;
+     height: 100%;
+     color: #000;
+    background: rgb(171, 171, 171);
+     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+
+}
+#sec-bottom .section-3 h6{
+    text-transform: uppercase;
+}
+#sec-bottom .section-3 p{
+    width: 70%;
+    text-align: justify;
+}
+#sec-bottom .section-4{
+    width: 20%;
+    height: 100%;
+    padding:1rem;
+    background: #0000;
+     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: solid 1px #d6d6d6;
+    
+
+}
+#sec-bottom .section-4 h6{
+    text-transform: uppercase;
+}
+
+
 
 
